fix the overflow  light ray -add overflow clip or hidden to about me section

--- a/css/lamp.css
+++ b/css/lamp.css
@@ -16,10 +16,11 @@
   display: block;
   width: 100%;
   height: 100%;
-  
+  /* overflow-y: visible; */
+
   /* max-height: 50vh; */
-  /* overflow: hidden;
-  border: 1px solid #ccc; */
+  /* overflow: hidden; */
+  /*border: 1px solid #ccc; */
 }
 
 .table {
@@ -87,7 +88,7 @@
 
 #hamburger-menu:has(.darkmode-input:checked) ~ main:has(.scene) .lamp:after {
   background: linear-gradient(#fff1bd, transparent);
-  clip-path: polygon(53% 0, 57% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(53% 0, 57% 0, 100% 80%, 0% 80%);
   opacity: 0.8;
   z-index: 999999;
 }
@@ -149,17 +150,30 @@
     /* Subtle shadow for depth */ inset 0 0 0.25rem rgba(255, 255, 255, 0.2); /* Inner highlight for texture */
 }
 @keyframes bounce {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(0.5rem); }
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(0.5rem);
+  }
 }
 
 @keyframes toggle {
-  0% { height: 2rem; }
-  100% { height: 2.5rem; }
+  0% {
+    height: 2rem;
+  }
+  100% {
+    height: 2.5rem;
+  }
 }
 #hamburger-menu:has(.darkmode-input:checked) ~ main:has(.scene) .switch {
   height: 2.5rem;
   animation: bounce 0.5s ease-in-out;
+}
+
+#hamburger-menu:has(.darkmode-input:checked) ~ main:has(.scene) {
+  margin-right: 0;
 }
 @keyframes swing {
   0% {
