--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ nav ul li a.active::after {
 }
 
 main {
-  margin: clamp(2.25rem, 2vw + 1.25rem, 3rem);
+  margin: clamp(0.5rem, 2vw + 1.25rem, 3rem);
   position: relative;
   z-index: 0;
 }
@@ -306,6 +306,7 @@ main {
   position: relative;
   z-index: 1;
   padding-top: clamp(7rem, 15vw + 6rem, 13rem);
+  overflow: hidden;
 }
 
 #about-me .my-info {
